Fix z-index issue with modals

--- a/web/less/frontend/modules/marketplace.less
+++ b/web/less/frontend/modules/marketplace.less
@@ -344,7 +344,7 @@ div.onecolumn {
   position: absolute;
   top: -5px;
   right: 1px;
-  z-index: 2000;
+  z-index: 1010;
   .size(178px, 376px);
   background: url("/images/headlines/banner-holiday-market-sell-your-stuff.png") no-repeat 0 0;
 
@@ -356,6 +356,7 @@ div.onecolumn {
     position: absolute;
     top: 5px;
     right: 10px;
+    z-index: 1011;
     color: #c0e1f7;
     font-size: 14px;
     cursor: pointer;
